--- a/css/main.css
+++ b/css/main.css
@@ -16,17 +16,41 @@
   text-align: center;
   font-family: "Stencil";
 }
-  .col-sm-3 .thumbnail img{
+.col-sm-3 .thumbnail img{
     height: 200px;
   }
-  .row{
+.row{
     background-color: #9C9C9C;
     padding: 10px;
   }
-  .caption{
+.caption{
     background-color: #2A2A2A;
   }
-  .caption p{
+.caption p{
     color: white;
   }
+.navbar-custom{
+  background-color: #2A2A2A;
+}
+/*
+changes the font color of navbar
+*/
+.navbar a {
+    color: white;
+}
+li{
+  font-family: "Stencil";
+  font-size: 15px;
+}
+.center{
+  text-align: center;
+}
+p{
+  font-family:"Tahoma";
+}
+a{
+  display: inline;
+}
+.searchform{
+  padding:10px;
 }
