--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
 .container-fluid{
   background-color: #3D3D3D;
+  height: 100%;
 }
+
 #banner{
   width: 100%;
+
 
 }
 #newarrival{
@@ -16,15 +19,16 @@
   text-align: center;
   font-family: "Stencil";
 }
-.col-sm-3 .thumbnail img{
-    height: 200px;
-  }
-.row{
-    background-color: #9C9C9C;
-    padding: 10px;
-  }
+.col-sm-6 > img{
+  height: 500px;
+  width: 100%;
+
+}
+.col-sm-3 > .thumbnail{
+  border: none;
+}
 .caption{
-    background-color: #2A2A2A;
+    background-color: #3D3D3D;
   }
 .caption p{
     color: white;
@@ -48,9 +52,93 @@ li{
 p{
   font-family:"Tahoma";
 }
-a{
-  display: inline;
-}
 .searchform{
   padding:10px;
+}
+.text-box > .newarrivaltext{
+  color: white;
+  position: absolute;
+  top: 92%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+.text-box > .newarrivaltext > h4{
+  font-family: "Stencil";
+  font-size: 60px;
+}
+
+ .text-box > .sale{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+.text-box > .sale >h4{
+  color: white;
+  opacity: 0.8;
+  font-family: "Stencil";
+  font-size: 40px;
+  background-color: red;
+  width: 150px;
+  text-align: center;
+}
+
+.col-sm-3 > .thumbnail > img{
+  width: 100%;
+  height: 350px;
+}
+.inline {
+  display: inline;
+  margin: 10px;
+}
+
+.caption{
+  text-align: center;
+}
+.col-sm-6{
+  text-align: center;
+}
+ h3{
+   padding: 10px;
+  text-align: center;
+  font-family:"Tahoma";
+}
+.form-group{
+  padding:20px;
+  margin: 20px;
+}
+.btn-primary{
+  width: 100px;
+  margin: 20px;
+}
+
+
+.newcust, .returning{
+  background-color: #9E9E9E;
+  color: white;
+  height: 600px;
+}
+html, body{
+  margin: 0px;
+  padding: 0px;
+}
+.sidenav{
+ list-style-type: none;
+  left: 10px;
+  width: 200px;
+  height: 100%;
+  background-color: #9E9E9E;
+  color: white;
+  float: left;
+}
+.container{
+  float: right;
+  background-color: #9E9E9E;
+  height: 100%;
+  max-width: 100%;
+  padding: 10px;
+  margin: 0 auto;
+
 }
